# raiko

./: CHANGELOG.md  Cargo.toml
core/src/: interfaces.rs  lib.rs  preflight.rs
core/src/provider/: rpc.rs
host/: Cargo.toml
host/src/: lib.rs
host/src/server/: mod.rs  worker.rs
host/src/server/api/: mod.rs
host/src/server/api/v1/: proof.rs
lib/: Cargo.toml
lib/src/: lib.rs  protocol_instance.rs  prover.rs
provers/sp1/driver/: Cargo.toml
provers/sp1/driver/src/: lib.rs  local.rs
provers/sp1/driver/src/distributed/: mod.rs  partial_proof_request.rs  prover.rs  sp1_specifics.rs  worker.rs
provers/sp1/driver/src/distributed/orchestrator/: mod.rs  worker_client.rs
provers/sp1/driver/src/distributed/worker/: client.rs  envelope.rs  mod.rs  pool.rs  protocol.rs  socket.rs
provers/sp1/guest/elf/: sp1-guest
script/: build.sh
